--- a/modules/project-conditions/client/views/projectcondition-edit.html
+++ b/modules/project-conditions/client/views/projectcondition-edit.html
@@ -1,90 +1,90 @@
-<h1 class="page-title no-lower-margin">
-	{{project.name}}: Add / Edit Condition
-</h1>
+<div class="edit-condition-view"></div>
 
-<form name="conditionForm" ng-submit="save(conditionForm.$valid)" novalidate>
-
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<button class="btn btn-xs btn-link" ui-sref="p.projectcondition.list">Cancel</button>
-		<button class="btn btn-xs btn-link" href type="submit">Save</button>
+	<div class="view-title-container">
+		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Add/Edit Condition</h1>
 	</div>
-</div>
+	
+	<div class="view-body-container">
 
-<div class="panel panel-default">
-	<div class="panel-body">
+		<form name="conditionForm" ng-submit="save(conditionForm.$valid)" novalidate>
 
-		<div class="row">
-			<div class="col-sm-4">
-				<div class="form-group" x-show-errors>
-					<label for="name" class="control-label">Name</label>
-					<input id="name" name="name" type="text" class="form-control input-sm" ng-model="condition.name" required>
+			<div class="row hidden">
+				<div class="col-sm-12 text-right">
+					<button class="btn btn-xs btn-link" ui-sref="p.projectcondition.list">Cancel</button>
+					<button class="btn btn-xs btn-link" href type="submit">Save</button>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="form-group" x-show-errors>
+						<label for="name" class="control-label">Name</label>
+						<input id="name" name="name" type="text" class="form-control input-sm" ng-model="condition.name" required>
 						<div ng-messages="conditionForm.name.$error" role="alert">
 							<p class="help-block error-text" ng-message="required">Name is required.</p>
 						</div>
+					</div>
 				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="form-group">
-					<label for="subject" class="control-label">Subject</label>
-					<input id="subject" type="text" class="form-control input-sm" ng-model="condition.subject">
+				<div class="col-sm-4">
+					<div class="form-group">
+						<label for="subject" class="control-label">Subject</label>
+						<input id="subject" type="text" class="form-control input-sm" ng-model="condition.subject">
+					</div>
 				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="form-group">
-					<label for="sector" class="control-label">Sector</label>
-					<select id="sector" ng-model='condition.sector' class="form-control input-sm" ng-options="sector.id as sector.title for sector in sectors"></select>
-				</div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="form-group">
-					<label for="shortDesc" class="control-label">Condition</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="condition.description" rows=6></textarea>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="form-group">
-					<label for="shortDesc" class="control-label">Report Requirements</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="condition.reportRequirements" rows=6></textarea>
-				</div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="pillar" class="control-label">Pillars</label>
-					<div class="well well-sm">
-						<select-array x-source-array="pillars" x-selected-array="condition.pillars" x-key-string="id" x-value-string="title"></select-array>
+				<div class="col-sm-4">
+					<div class="form-group">
+						<label for="sector" class="control-label">Sector</label>
+						<select id="sector" ng-model='condition.sector' class="form-control input-sm" ng-options="sector.id as sector.title for sector in sectors"></select>
 					</div>
 				</div>
 			</div>
 
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="stage" class="control-label">Applicable Stages</label>
-					<div class="well well-sm">
-						<select-array x-source-array="stages" x-selected-array="condition.stages" x-key-string="id" x-value-string="title"></select-array>
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="form-group">
+						<label for="shortDesc" class="control-label">Condition</label>
+						<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="condition.description" rows=6></textarea>
 					</div>
 				</div>
 			</div>
-		</div>
-
-		<hr>
-
-		<div class="row">
-			<div class="col-sm-12 text-right">
-				<button class="btn btn-default" ui-sref="p.projectcondition.list">Cancel</button>
-				<button class="btn btn-default" type="submit">Save</button>
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="form-group">
+						<label for="shortDesc" class="control-label">Report Requirements</label>
+						<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="condition.reportRequirements" rows=6></textarea>
+					</div>
+				</div>
 			</div>
-		</div>
 
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="form-group">
+						<label for="pillar" class="control-label">Pillars</label>
+						<div class="well well-sm">
+							<select-array x-source-array="pillars" x-selected-array="condition.pillars" x-key-string="id" x-value-string="title"></select-array>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6">
+					<div class="form-group">
+						<label for="stage" class="control-label">Applicable Stages</label>
+						<div class="well well-sm">
+							<select-array x-source-array="stages" x-selected-array="condition.stages" x-key-string="id" x-value-string="title"></select-array>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<hr>
+
+			<div class="row">
+				<div class="col-sm-12 text-right">
+					<button class="btn btn-default" ui-sref="p.projectcondition.list">Cancel</button>
+					<button class="btn btn-default" type="submit">Save</button>
+				</div>
+			</div>
+		</form>
 	</div>
-</div>
 
-</form>
+</div>
