--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row hidden">
 	<div class="col-sm-6 col-sm-offset-6 text-right form-inline">
 		<div class="form-group">
 			<show-filter x-toggle-filter="toggleFilter"></show-filter>
@@ -16,30 +16,26 @@
 		</div>
 	</div>
 </div>
-<div class="row">
-	<div class="col-sm-12">
-		<section class="panel panel-default">
-			<table ng-table="s.tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover	table-striped">
-				<tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
-					<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
-					<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.version}}</td>
-					<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.stage}}</td>
-					<td data-title="'Published'" sortable="'published'"><i ng-if="o.isPublished" class="glyphicon glyphicon-ok"></i></td>
-					<td width="1%" class="text-right">
-			        		<span ng-if="o.userPermissions.write && !o.published">
-				        	<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.artifact.edit({artifactId:o._id})">
-				        	<i class="glyphicon glyphicon-pencil"></i>
-				        	</a>
-				        </span>
-			        </td>
-				</tr>
-				<tr ng-if="!$data || $data.length === 0">
-					<td colspan="5">
-						<span ng-if="!s.public">To add an artifact, select from the list above and click the Add button.</span>
-						<span ng-if="s.public">There are no artifacts available at this time.</span>
-					</td>
-				</tr>
-			</table>
-		</section>
-	</div>
-</div>
+
+<table ng-table="s.tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
+	<tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
+		<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
+		<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.version}}</td>
+		<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.stage}}</td>
+		<td data-title="'Published'" sortable="'published'"><i ng-if="o.isPublished" class="glyphicon glyphicon-ok"></i></td>
+		<td class="actions-col">
+			<span ng-if="o.userPermissions.write && !o.published">
+				<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.artifact.edit({artifactId:o._id})">
+					<i class="glyphicon glyphicon-pencil"></i>
+				</a>
+			</span>
+		</td>
+	</tr>
+	<tr ng-if="!$data || $data.length === 0">
+		<td colspan="5">
+			<span ng-if="!s.public">To add an artifact, select from the list above and click the Add button.</span>
+			<span ng-if="s.public">There are no artifacts available at this time.</span>
+		</td>
+	</tr>
+</table>
+
