--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -1,21 +1,17 @@
-<div class="container-fluid footer" ng-cloak>
-	<div class="row">
-		<div id="main-foot-content" ng-class="{'col-sm-12': !footer.side, 'col-sm-10': footer.side}">
-			<div class="panel panel-default">
-				<div class="panel-body small">
-					<div class="pull-right">
-						<a target="_new" href="http://www.gov.bc.ca/com/copyright.html" title="BC Government Copyright Information">Copyright</a> |
-						<a target="_new" href="http://www.gov.bc.ca/com/disclaimer.html" title="BC Government Warranty Disclaimer and Limitation of Liabilities Information">Disclaimer</a> |
-						<a target="_new" href="http://www.gov.bc.ca/com/privacy.html" title="BC Government Privacy Information">Privacy</a> |
-						<a target="_new" href="http://www.gov.bc.ca/com/accessibility.html" title="BC Government Accessibility Information">Accessibility</a> |
-						<a ng-show="!footer.authentication.user" ui-sref="authentication.signin">Log In</a>
-						<a ng-show="footer.authentication.user" href="/api/auth/signout" target="_self">Logout</a>           
-					</div>
-					<span ng-if="footer.environment === 'EAO'">Environmental Assessment Office, Victoria BC</span>
-					<span ng-if="footer.environment === 'MEM'">Ministry of Energy and Mines, Province of British Columbia</span>					
-				</div>
+<div class="app-footer clearfix" ng-cloak>
+	<div id="main-foot-content">
+			<div class="pull-left">
+				<span ng-if="footer.environment === 'EAO'">Environmental Assessment Office, Victoria BC</span>
+				<span ng-if="footer.environment === 'MEM'">Ministry of Energy and Mines, Province of British Columbia</span>					
+			</div>
+			<div class="pull-right">
+				<a target="_new" href="http://www.gov.bc.ca/com/copyright.html" title="BC Government Copyright Information">Copyright</a> |
+				<a target="_new" href="http://www.gov.bc.ca/com/disclaimer.html" title="BC Government Warranty Disclaimer and Limitation of Liabilities Information">Disclaimer</a> |
+				<a target="_new" href="http://www.gov.bc.ca/com/privacy.html" title="BC Government Privacy Information">Privacy</a> |
+				<a target="_new" href="http://www.gov.bc.ca/com/accessibility.html" title="BC Government Accessibility Information">Accessibility</a> |
+				<a ng-show="!footer.authentication.user" ui-sref="authentication.signin">Log In</a>
+				<a ng-show="footer.authentication.user" href="/api/auth/signout" target="_self">Logout</a>           
 			</div>
 		</div>
 	</div>
-	<div x-window-height></div>
 </div>
