--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -1,4 +1,7 @@
-<h1 class="page-title  no-lower-margin">Project Documents</h1>
+
+<div class="view-title-container">
+	<h1>{{ project.name }}&nbsp; &rsaquo; &nbsp;Documents</h1>
+</div>
 
 <div class="row">
 	<div class="col-sm-12 text-right">
