--- a/modules/project-comments/client/views/period-view.html
+++ b/modules/project-comments/client/views/period-view.html
@@ -1,6 +1,7 @@
-<h1 class="page-title no-lower-margin">
-	Comment Periods for {{ project.name }}
-</h1>
+
+<div class="view-title-container">
+	<h1>{{ project.name }}&nbsp; &rsaquo; &nbsp;Comment Period</h1>
+</div>
 
 <div class="row">
 	<div class="col-sm-12 text-right">
