--- a/modules/project-complaints/client/views/complaint-edit.html
+++ b/modules/project-complaints/client/views/complaint-edit.html
@@ -1,65 +1,59 @@
-<h1 class="page-title no-lower-margin">
-	Add / Edit Complaint
-</h1>
+<div class="complaint-edit-view">
 
-<form name="complaintForm" ng-submit="save(complaintForm.$valid)" novalidate>
-
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<button class="btn btn-xs btn-link" ui-sref="p.complaint.list">Cancel</button>
-		<button class="btn btn-xs btn-link" href type="submit">Save</button>
+	<div class="view-title-container">
+		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Add / Edit Complaint</h1>
 	</div>
-</div>
 
-<div class="panel panel-default">
-	<div class="panel-body">
-		<div class="row">
-
-			<div class="col-sm-8">
-				<div class="form-group" x-show-errors>
-					<label for="complainant" class="control-label">Complainant</label>
-					<input id="complainant" name="complainant" ng-model='complaint.complainant' class="form-control input-sm" required>
+	<div class="view-body-container">
+		<form name="complaintForm" ng-submit="save(complaintForm.$valid)" novalidate>
+			<div class="row hidden">
+				<div class="col-sm-12 text-right">
+					<button class="btn btn-xs btn-link" ui-sref="p.complaint.list">Cancel</button>
+					<button class="btn btn-xs btn-link" href type="submit">Save</button>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-8">
+					<div class="form-group" x-show-errors>
+						<label for="complainant" class="control-label">Complainant</label>
+						<input id="complainant" name="complainant" ng-model='complaint.complainant' class="form-control input-sm" required>
 						<div ng-messages="complaintForm.complainant.$error" role="alert">
 							<p class="help-block error-text" ng-message="required">Complainant is required.</p>
 						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="form-group">
+						<label for="stage" class="control-label">Stage</label>
+						<select id="stage" ng-model='complaint.stage' class="form-control input-sm" ng-options="v as v for v in stages"></select>
+					</div>
 				</div>
 			</div>
-			<div class="col-sm-4">
-				<div class="form-group">
-					<label for="stage" class="control-label">Stage</label>
-					<select id="stage" ng-model='complaint.stage' class="form-control input-sm" ng-options="v as v for v in stages"></select>
+			<div class="row">
+				<div class="col-sm-8">
+					<div class="form-group" x-show-errors>
+						<label for="complaint" class="control-label">Complaint Description</label>
+						<textarea id="complaint" name="complaint" type="text" class="form-control input-sm" ng-model="complaint.complaint" rows=10 required></textarea>
+							<div ng-messages="complaintForm.complaint.$error" role="alert">
+								<p class="help-block error-text" ng-message="required">Complaint is required.</p>
+							</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="form-group">
+						<label for="stage" class="control-label">Applicable Value Components</label>
+						<select-array x-source-array="d.vcs" x-selected-array='complaint.vcs' x-key-string="id" x-value-string="title"></select-array>
+					</div>
+				</div>			
+			</div>	
+			<hr>
+			<div class="row">
+				<div class="col-sm-12 text-right">
+					<button class="btn btn-default" ui-sref="p.complaint.list">Cancel</button>
+					<button class="btn btn-default" type="submit">Save</button>
 				</div>
 			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-8">
-				<div class="form-group" x-show-errors>
-					<label for="complaint" class="control-label">Complaint Description</label>
-					<textarea id="complaint" name="complaint" type="text" class="form-control input-sm" ng-model="complaint.complaint" rows=10 required></textarea>
-						<div ng-messages="complaintForm.complaint.$error" role="alert">
-							<p class="help-block error-text" ng-message="required">Complaint is required.</p>
-						</div>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="form-group">
-					<label for="stage" class="control-label">Applicable Value Components</label>
-					<select-array x-source-array="d.vcs" x-selected-array='complaint.vcs' x-key-string="id" x-value-string="title"></select-array>
-				</div>
-			</div>			
-		</div>
-		
-		<hr>
-
-		<div class="row">
-			<div class="col-sm-12 text-right">
-				<button class="btn btn-default" ui-sref="p.complaint.list">Cancel</button>
-				<button class="btn btn-default" type="submit">Save</button>
-			</div>
-		</div>
-
+		</form>
 	</div>
+	
 </div>
-
-</form>
