--- a/modules/project-complaints/client/views/complaint-list.html
+++ b/modules/project-complaints/client/views/complaint-list.html
@@ -1,28 +1,28 @@
-<h1 class="page-title no-lower-margin">
-	Complaints for {{ project.name }}
-</h1>
 
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="p.complaint.create()">+ Add New Complaint</a>
+<div class="project-complaints-view">
+	<div class="view-title-container">
+		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Complaints</h1>
 	</div>
-</div>
-
-<div class="row">
-	<div class="col-sm-12">
+	<div class="view-body-container">
+		<div class="button-bar">
+			<a class="btn btn-default btn-sm" ui-sref="p.complaint.create()">
+				<span class="glyphicon glyphicon-plus"></span>
+				<span>Add Complaint</span>
+			</a>
+		</div>
 		<section class="panel panel-default">
 			<table ng-table="tableParams" show-filter="true" class="table table-condensed table-hover table-striped">
-			    <tr ng-repeat="o in $data" ui-sref="p.complaint.detail({complaintId:o._id})">
+				<tr ng-repeat="o in $data" ui-sref="p.complaint.detail({complaintId:o._id})">
 					<td data-title="'Complainant'"	title:'Complainant'		filter="{'complainant':'text'}"	sortable="'complainant'"    >{{o.complainant}}</td>
 					<td data-title="'Stage'"			title:'Stage'			filter="{'stage':'select'}"		sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
-					<td widht="1%" class="text-right">
-			        		<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.complaint.edit({complaintId:o._id})">
+					<td>
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.complaint.edit({complaintId:o._id})">
 							<i class="glyphicon glyphicon-pencil"></i>
-			        		</a>
+						</a>
 					</td>
-			    </tr>
+				</tr>
 				<tr ng-if="!$data || $data.length === 0">
-					<td colspan="5">
+					<td colspan="3">
 						No records found.
 					</td>
 				</tr>			    
