--- a/modules/project-conditions/client/views/projectcondition-list.html
+++ b/modules/project-conditions/client/views/projectcondition-list.html
@@ -1,14 +1,19 @@
-<h1 class="page-title no-lower-margin">{{project.name}}: Condition Library</h1>
+<div class="project-conditions-view">
 
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="p.projectcondition.create()">+ Add New Condition</a>
-		<show-filter x-toggle-filter="toggleFilter"></show-filter>
+	<div class="view-title-container">
+		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Conditions</h1>
 	</div>
-</div>
-
-<div class="row">
-	<div class="col-sm-12">
+	
+	<div class="view-body-container">
+		<div class="button-bar clearfix">
+			<a class="btn btn-default btn-sm" ui-sref="p.projectcondition.create()">
+				<span class="glyphicon glyphicon-plus"></span>
+				<span>Add Condition</span>
+			</a>
+			<div class="pull-right">
+				<show-filter x-toggle-filter="toggleFilter"></show-filter>
+			</div>
+		</div>
 		<section class="panel panel-default">
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="p.projectcondition.detail({conditionId:o._id})" class="clickable">
@@ -17,9 +22,9 @@
 					<td data-title="'Subject'" filter="{'subject':'text'}"    sortable="'subject'" >{{o.subject}}</td>
 					<td data-title="'Stages'"   filter="{'stages':'text'}"  sortable="'stages'" >{{o.stageString}}</td>
 					<td data-title="'Pillars'"  filter="{'pillars':'text'}" sortable="'pillars'"  >{{o.pillarString}}</td>
-					<td width="1%" class="text-right">
+					<td>
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.projectcondition.edit({conditionId:o._id})">
-						<i class="glyphicon glyphicon-pencil"></i>
+							<i class="glyphicon glyphicon-pencil"></i>
 						</a>
 					</td>
 				</tr>
@@ -31,5 +36,5 @@
 			</table>
 		</section>
 	</div>
-
+	
 </div>
