--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -1,59 +1,75 @@
-<section id="projects-view" class="row">
-	<ui-view id="main-content-section" class="tr-slide" ng-class="{'col-sm-10': authentication.user, 'col-sm-12': !authentication.user}">
-
-		<div class="panel panel-default" ng-if="false" ng-show="environment === 'MEM' && !authentication.user">
-			<div class="panel-heading">
-				<h3 class="panel-title">Public Project Listing</h3>
-			</div>
-			<div class='panel-body'>
-
-<p>The Ministry of Energy and Mines (MEM) is committed to making information on permitted mine sites in British Columbia more accessible to interested parties. MEM has collaborated with the BC Environmental Assessment Office (EAO) to develop a new platform and has to date posted the following information online:</p>
-
-<ul>
-<li>Permits and amendments for major mines that are currently operating or under construction</li>
-<li>MEM inspection reports (2013 onwards) for major mines that are currently operating or under construction</li>
-</ul>
-
-<p>In the coming months, the following information will be posted:</p>
-<ul>
-<li>Permits and amendments for all major mines in BC (i.e., closed mines and mines in care and maintenance in addition to those that are currently operating/under construction)</li>
-<li>Dam safety inspections/reviews for permitted major mines (2013 onwards)</li>
-<li>Annual reclamation reports for permitted major mines (2013 onwards)</li>
-</ul>
-
-<p>More documents will be posted in future phases of this initiative; this first phase is limited to documents that meet the specifications above and are currently available electronically. Requests for specific documents not available via this web platform can be directed to the Ministry of Energy and Mines and/or to the Office of the Chief Information Officer (for requests made under the Freedom of Information and Protection of Privacy Act).</p>
-
-			</div>
+<section id="projects-view" class="public-home-view">
+	
+	<div class="view-content">
+		
+		<div class='left-panel' id="main-side-section" ng-if="authentication.user">
+			<tmpl-system-menu x-menu-context="'projects'"></tmpl-system-menu>
 		</div>
-
-		<div class="row">
-			<div class="col-sm-4" ng-class="{'activity-list-med': !form.expandnews}" ng-init="form.expandnews = false">
-				<tmpl-recent-activity id="anchor-recent" x-form="form"></tmpl-recent-activity>
+		
+		<div class="main-panel">
+			
+			<!-- BEGIN: VIEW TITLE CONTAINER -->
+			<div class="view-title-container hidden">
+				<h1>Page Title Here?</h1>
 			</div>
-			<div class="col-sm-8">
-				<tmpl-projects-map
-					id="anchor-map"
-					x-projects='projects'>
-				</tmpl-projects-map>
+			<!-- END: VIEW TITLE CONTAINER -->
+			
+			<!-- BEGIN: VIEW BODY CONTAINER -->
+			<div class="view-body-container">
+				<ui-view id="main-content-section">
+					
+					<!-- BEGIN: MEM DECRIPTION PANEL -->
+					<div class="panel panel-default" ng-if="false" ng-show="environment === 'MEM' && !authentication.user">
+						<div class="panel-heading">
+							<h3 class="panel-title">Public Project Listing</h3>
+						</div>
+						<div class="panel-body">
+							<p>The Ministry of Energy and Mines (MEM) is committed to making information on permitted mine sites in British Columbia more accessible to interested parties. MEM has collaborated with the BC Environmental Assessment Office (EAO) to develop a new platform and has to date posted the following information online:</p>
+							<ul>
+								<li>Permits and amendments for major mines that are currently operating or under construction</li>
+								<li>MEM inspection reports (2013 onwards) for major mines that are currently operating or under construction</li>
+							</ul>
+							<p>In the coming months, the following information will be posted:</p>
+							<ul>
+								<li>Permits and amendments for all major mines in BC (i.e., closed mines and mines in care and maintenance in addition to those that are currently operating/under construction)</li>
+								<li>Dam safety inspections/reviews for permitted major mines (2013 onwards)</li>
+								<li>Annual reclamation reports for permitted major mines (2013 onwards)</li>
+							</ul>
+							<p>More documents will be posted in future phases of this initiative; this first phase is limited to documents that meet the specifications above and are currently available electronically. Requests for specific documents not available via this web platform can be directed to the Ministry of Energy and Mines and/or to the Office of the Chief Information Officer (for requests made under the Freedom of Information and Protection of Privacy Act).</p>
+						</div>
+					</div>
+					<!-- END: MEM DESCRIPTION PANEL -->
 
-				<tmpl-projects-list2
-					id="anchor-list"
-					x-projects='projects'
-					ng-if="form.expandnews">
-				</tmpl-projects-list2>
-
+					<div class="row">
+						<div class="col-sm-4" ng-class="{'activity-list-med': !form.expandnews}" ng-init="form.expandnews = false">
+							<tmpl-recent-activity id="anchor-recent" x-form="form"></tmpl-recent-activity>
+						</div>
+						<div class="col-sm-8">
+							<tmpl-projects-map
+								id="anchor-map"
+								x-projects='projects'>
+							</tmpl-projects-map>
+							<tmpl-projects-list2
+								id="anchor-list"
+								x-projects='projects'
+								ng-if="form.expandnews">
+							</tmpl-projects-list2>
+						</div>
+					</div>
+					
+					<div class="row" ng-if="!form.expandnews">
+						<div class="col-sm-12">
+							<tmpl-projects-list2
+								id="anchor-list"
+								x-projects='projects'>
+							</tmpl-projects-list2>
+						</div>
+					</div>
+				</ui-view>
 			</div>
+			<!-- END: VIEW BODY CONTAINER -->
+			
 		</div>
-		<div class="row" ng-if="!form.expandnews">
-			<div class="col-sm-12">
-				<tmpl-projects-list2
-					id="anchor-list"
-					x-projects='projects'>
-				</tmpl-projects-list2>
-			</div>
-		</div>
-	</ui-view>
-	<div class='col-sm-2 tr-slide' id="main-side-section" ng-if="authentication.user">
-		<tmpl-system-menu x-menu-context="'projects'"></tmpl-system-menu>
 	</div>
+	
 </section>
