--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -1,36 +1,33 @@
-<h1 class="page-title no-lower-margin">
-	{{ project.name }} &rsaquo; Value Components
-</h1>
-
-<div class="button-bar row">
-	<div class="col-sm-12 clearfix">
-		<div class="pull-left">
-			<button class="btn btn-default btn-sm" ui-sref="p.vc.create()">
-                <span class="glyphicon glyphicon-plus"></span><span>Add Value Component</span></button>
-			<button class="btn btn-default btn-sm" ui-sref="p.vc.list" ng-click="openAddTopic()">
-                <span class="glyphicon glyphicon-plus"></span><span>Add Topics</span>
-            </button>
-		</div>
-	</div>
+<div class="view-title-container">
+	<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Valued Components</h1>
 </div>
 
-<div class="row">
-	<div class="col-sm-12">
-		<section class="panel panel-default">
-			<table ng-table="tableParams" show-filter="true" class="table table-condensed table-hover table-striped">
-				<tr ng-repeat="o in $data" ui-sref="p.vc.detail({vcId:o._id})">
-					<td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    >{{o.name}}</td>
-					<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
-					<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
-					<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
-					<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
-				</tr>
-				<tr ng-if="!$data || $data.length === 0">
-					<td colspan="6">
-						No records found.
-					</td>
-				</tr>			    
-			</table>
-		</section>
+<div class="view-body-container">
+	<div class="button-bar clearfix">
+		<div class="pull-left">
+			<button class="btn btn-default btn-sm" ui-sref="p.vc.create()">
+				<span class="glyphicon glyphicon-plus"></span><span>Add Value Component</span></button>
+			<button class="btn btn-default btn-sm" ui-sref="p.vc.list" ng-click="openAddTopic()">
+				<span class="glyphicon glyphicon-plus"></span><span>Add Topics</span>
+			</button>
+		</div>
 	</div>
+	
+	<section class="panel panel-default">
+		<table ng-table="tableParams" show-filter="true" class="table table-condensed table-hover table-striped">
+			<tr ng-repeat="o in $data" ui-sref="p.vc.detail({vcId:o._id})">
+				<td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    >{{o.name}}</td>
+				<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
+				<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
+				<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
+				<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
+			</tr>
+			<tr ng-if="!$data || $data.length === 0">
+				<td colspan="6">
+					No records found.
+				</td>
+			</tr>			    
+		</table>
+	</section>
+
 </div>
